# kafka-process

./: .gitignore  LICENSE  README.md  pyproject.toml
kafka_process/supervisors/: multiprocess.py
