[tool.poetry]
name = "kafka-process"
version = "0.0.1"
description = ""
authors = ["Alexander Walther <asushofman@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "kafka_process"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = ">=23.2.0"
tricky = "0.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
